Work completed in class 17th of september

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<title>GOPI | Join Us</title>
+		<title>GOPI | Article</title>
 		<meta name="author" content="Russell">
 		<meta name="description" content="description here">
 		<meta name="keywords" content="keywords,here">
-		<link rel="shortcut icon" href="../assets/logo.png" type="image/vnd.microsoft.icon">
+		<link rel="shortcut icon" href="../assets/favicon.ico" type="image/vnd.microsoft.icon">
 		<link rel="stylesheet" href="../css/style.css" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Nunito|PT+Mono&display=swap" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -70,15 +70,13 @@
 
 						<!-- Threats article box -->
 						<div class="article__container">
-							<div class="article__container--image">
-								<div class="test"></div>
-							</div>
+							<div class="article__container--image" id="imageThreat"></div>
 							<div class="article__container--text">
 								<h4>Threats</h4>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
 							</div>
 							<div class="article__container--btn">
-								<a href="articleThreats.html">
+								<a href="article_threats.html">
 									<span class="article__btn">
 										<p>More</p>
 									</span>
