--- a/pages/template.html
+++ b/pages/template.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="Russell">
 		<meta name="description" content="description here">
 		<meta name="keywords" content="keywords,here">
-		<link rel="shortcut icon" href="../assets/logo.png" type="image/vnd.microsoft.icon">
+		<link rel="shortcut icon" href="../assets/favicon.ico" type="image/vnd.microsoft.icon">
 		<link rel="stylesheet" href="../css/style.css" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Nunito|PT+Mono&display=swap" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
