made join us page responsive

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -73,7 +73,7 @@
 							<div class="article__container--image" id="imageThreat"></div>
 							<div class="article__container--text">
 								<h4>Threats</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
+								<p>The ecology of Pāuatahanui Inlet is under threat from three primary...</p>
 							</div>
 							<div class="article__container--btn">
 								<a href="article_threats.html">
