--- a/pages/joinUs.html
+++ b/pages/joinUs.html
@@ -65,9 +65,8 @@
 				
 				<div class="section">
 					<!-- Holds the articles and content of the website -->
-					<div class="section__article">
-
-						<h2>Join Us</h2>
+					<h2>Join Us</h2>
+					<div class="section__articles">
 
 						<!-- Form starts -->
 						<!-- <form class="member__form"> -->
