started on desktop break point

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 					<ul>
 						<a href="index.html"><li>Home</li></a>
-						<a href="#"><li>Educational Resources</li></a>
+						<a href="pages/education.html"><li>Educational Resources</li></a>
 						<a href="pages/articles.html"><li>Articles</li></a>
 						<a href="pages/joinUs.html"><li class="highlighted">Join Us</li></a>
 						<a href="#"><li class="highlighted">Donations</li></a>
