--- a/pages/joinUs.html
+++ b/pages/joinUs.html
@@ -268,7 +268,7 @@
 						<p>Thank you for registering with Guardians of P&amacr;uatahnui Inlet. We look forward to seeing you in future meetings and at future events. We will email you with details now.</p>
 					</div>
 					<div class="confirmation__footer">
-						<a href="../index.html">
+						<a href="../index.html" class="confirmation__btn">
 							<span>
 								<p>Back Home</p>
 							</span>
