--- a/pages/articles.html
+++ b/pages/articles.html
@@ -51,15 +51,17 @@
 			<div class="body">
 
 				<!-- Holds the navigation menu for desktop-->
-				<nav id="mobile">
-						<ul>
-							<a href="../index.html"><li>Home</li></a>
-							<a href="education.html"><li>Educational Resources</li></a>
-							<a href="articles.html"><li>Articles</li></a>
-							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
-							<a href="#"><li class="highlighted">Donations</li></a>
-						</ul>
-					</nav>
+				<nav id="desktop">
+
+					<ul>
+						<a href="../index.html"><li>Home</li></a>
+						<a href="education.html"><li>Educational Resources</li></a>
+						<a href="articles.html"><li>Articles</li></a>
+						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
+						<a href="#"><li class="highlighted">Donations</li></a>
+					</ul>
+
+				</nav>
 				
 				<!-- Holds the articles and content of the website -->
 				<div class="section">
