made desktop break point

--- a/pages/article_threats.html
+++ b/pages/article_threats.html
@@ -64,9 +64,11 @@
 				</nav>
 				
 				<!-- Holds the articles and content of the website -->
-				<div class="section">
-					<h2>Threats</h2>
-					<div class="section__articles">
+				<div class="section section__articles">
+					<div class="section__span">
+						<h2>Threats</h2>
+					</div>
+
 						<!-- <div class="article__block"> -->
 							<div class="article__text article__text--aside">
 								<h3>What Threatens the Inlet</h3>
@@ -100,9 +102,6 @@
 								
 							</div>
 						<!-- </div> -->
-
-					</div>
-
 				</div>
 
 			</div>
