--- a/pages/articles.html
+++ b/pages/articles.html
@@ -64,118 +64,112 @@
 				</nav>
 				
 				<!-- Holds the articles and content of the website -->
-				<div class="section">
 
-					<h2>Articles</h2>
-
-					<div class="section__articles">
-
-						<!-- Threats article box -->
-						<div class="article__container">
-							<div class="article__container--image" id="imageThreat"></div>
-							<div class="article__container--text">
-								<h4>Threats</h4>
-								<p>The ecology of Pāuatahanui Inlet is under threat from three primary...</p>
-							</div>
-							<div class="article__container--btn">
-								<a href="article_threats.html">
-									<span class="article__btn">
-										<p>More</p>
-									</span>
-								</a>
-							</div>
+				<div class="section section__articles">
+					<div class="section__span">
+						<h2>Articles</h2>
+					</div>
+					<!-- Threats article box -->
+					<div class="article__container">
+						<div class="article__container--image" id="imageThreat"></div>
+						<div class="article__container--text">
+							<h4>Threats</h4>
+							<p>The ecology of Pāuatahanui Inlet is under threat from three primary...</p>
 						</div>
-
-						<!-- Sample article -->
-						<div class="article__container">
-							<div class="article__container--image">
-								<div class="test"></div>
-							</div>
-							<div class="article__container--text">
-								<h4>Sample</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
-							</div>
-							<div class="article__container--btn">
-								<a href="#">
-									<span class="article__btn">
-										<p>More</p>
-									</span>
-								</a>
-							</div>
-						</div>
-
-						<!-- Sample article -->
-						<div class="article__container">
-							<div class="article__container--image">
-								<div class="test"></div>
-							</div>
-							<div class="article__container--text">
-								<h4>Sample</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
-							</div>
-							<div class="article__container--btn">
-								<a href="#">
-									<span class="article__btn">
-										<p>More</p>
-									</span>
-								</a>
-							</div>
-						</div>
-
-						<!-- Sample article -->
-						<div class="article__container">
-							<div class="article__container--image">
-								<div class="test"></div>
-							</div>
-							<div class="article__container--text">
-								<h4>Sample</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
-							</div>
-							<div class="article__container--btn">
-								<a href="#">
-									<span class="article__btn">
-										<p>More</p>
-									</span>
-								</a>
-							</div>
-						</div>
-
-						<!-- Sample article -->
-						<div class="article__container">
-							<div class="article__container--image">
-								<div class="test"></div>
-							</div>
-							<div class="article__container--text">
-								<h4>Sample</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
-							</div>
-							<div class="article__container--btn">
-								<a href="#">
-									<span class="article__btn">
-										<p>More</p>
-									</span>
-								</a>
-							</div>
-						</div>
-
-						<!-- Sample article -->
-						<div class="article__container">
-							<div class="article__container--image">
-								<div class="test"></div>
-							</div>
-							<div class="article__container--text">
-								<h4>Sample</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
-							</div>
-							<div class="article__container--btn">
-								<a href="#">
-									<span class="article__btn">
-										<p>More</p>
-									</span>
-								</a>
-							</div>
+						<div class="article__container--btn">
+							<a href="article_threats.html">
+								<span class="article__btn">
+									<p>More</p>
+								</span>
+							</a>
 						</div>
 					</div>
+					<!-- Sample article -->
+					<div class="article__container">
+						<div class="article__container--image">
+							<div class="test"></div>
+						</div>
+						<div class="article__container--text">
+							<h4>Sample</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
+						</div>
+						<div class="article__container--btn">
+							<a href="#">
+								<span class="article__btn">
+									<p>More</p>
+								</span>
+							</a>
+						</div>
+					</div>
+					<!-- Sample article -->
+					<div class="article__container">
+						<div class="article__container--image">
+							<div class="test"></div>
+						</div>
+						<div class="article__container--text">
+							<h4>Sample</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
+						</div>
+						<div class="article__container--btn">
+							<a href="#">
+								<span class="article__btn">
+									<p>More</p>
+								</span>
+							</a>
+						</div>
+					</div>
+					<!-- Sample article -->
+					<div class="article__container">
+						<div class="article__container--image">
+							<div class="test"></div>
+						</div>
+						<div class="article__container--text">
+							<h4>Sample</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
+						</div>
+						<div class="article__container--btn">
+							<a href="#">
+								<span class="article__btn">
+									<p>More</p>
+								</span>
+							</a>
+						</div>
+					</div>
+					<!-- Sample article -->
+					<div class="article__container">
+						<div class="article__container--image">
+							<div class="test"></div>
+						</div>
+						<div class="article__container--text">
+							<h4>Sample</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
+						</div>
+						<div class="article__container--btn">
+							<a href="#">
+								<span class="article__btn">
+									<p>More</p>
+								</span>
+							</a>
+						</div>
+					</div>
+					<!-- Sample article -->
+					<div class="article__container">
+						<div class="article__container--image">
+							<div class="test"></div>
+						</div>
+						<div class="article__container--text">
+							<h4>Sample</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
+						</div>
+						<div class="article__container--btn">
+							<a href="#">
+								<span class="article__btn">
+									<p>More</p>
+								</span>
+							</a>
+						</div>
+					</div>
+				</div>
 
 				</div>					
 
