--- a/pages/education.html
+++ b/pages/education.html
@@ -64,11 +64,11 @@
 				</nav>
 				
 				<!-- Holds the articles and content of the website -->
-				<div class="section">
+				<div class="section section__articles">
 
-					<h2>Education</h2>
-
-					<div class="section__articles">
+					<div class="section__span">
+						<h2>Education</h2>
+					</div>
 
 						<!-- Threats article box -->
 						<div class="article__container">
@@ -177,7 +177,6 @@
 								</a>
 							</div>
 						</div>
-					</div>
 
 				</div>					
 
