--- a/pages/joinUs.html
+++ b/pages/joinUs.html
@@ -63,10 +63,13 @@
 
 				</nav>
 				
-				<div class="section">
+				<!-- <div class="section"> -->
 					<!-- Holds the articles and content of the website -->
-					<h2>Join Us</h2>
-					<div class="section__articles">
+					<div class="section__articles section">
+
+						<div class="section__span">
+							<h2>Join Us</h2>
+						</div>
 
 						<!-- Form starts -->
 						<!-- <form class="member__form"> -->
