started coloring and styling site

--- a/pages/joinUs.html
+++ b/pages/joinUs.html
@@ -110,31 +110,47 @@
 								<div class="member__block--field">
 									<!-- 1 year subscription option -->
 									<div class="member__subscription">
-										<!-- Label for the radio button -->
-										<label for="subscription" class="member__label--subscription">1 Year Individual - $12</label>
+										<div class="member__field--label">
+											<!-- Label for the radio button -->
+											<label for="subscription" class="member__label--subscription">1 Year Individual - $12</label>
+										</div>
 										<!-- The radio Selct button -->
-										<input type="radio" name="subscription" id="1yi" class="member__radio">
+										<div class="member__field">
+											<input type="radio" name="subscription" id="1yi" class="member__radio">
+										</div>
 									</div>
 									<!-- 5 year subscription option -->
 									<div class="member__subscription">
 										<!-- Label for the radio button -->
-										<label for="subscription" class="member__label--subscription">5 Year Individual - $50</label>
+										<div class="member__field--label">
+											<label for="subscription" class="member__label--subscription">5 Year Individual - $50</label>
+										</div>
 										<!-- The radio select button -->
-										<input type="radio" name="subscription" id="5yi" class="member__radio">
+										<div class="member__field">
+											<input type="radio" name="subscription" id="5yi" class="member__radio">
+										</div>
 									</div>
 									<!-- 1 year subscription option for Family -->
 									<div class="member__subscription">
 										<!-- Label for the radio button -->
-										<label for="subscription" class="member__label--subscription">1 Year Family - $15</label>
+										<div class="member__field--label">
+											<label for="subscription" class="member__label--subscription">1 Year Family - $15</label>
+										</div>
 										<!-- The radio select button -->
-										<input type="radio" name="subscription" id="1yf" class="member__radio">
+										<div class="member__field">
+											<input type="radio" name="subscription" id="1yf" class="member__radio">
+										</div>
 									</div>
 									<!-- 5 year subscription option for family -->
 									<div class="member__subscription">
 										<!-- Label for the radio button -->
-										<label for="subscription" class="member__label--subscription">5 Year Famlily - $50</label>
+										<div class="member__field--label">
+											<label for="subscription" class="member__label--subscription">5 Year Famlily - $50</label>
+										</div>
 										<!-- The radio select button -->
-										<input type="radio" name="subscription" id="5yf" class="member__radio">
+										<div class="member__field">
+											<input type="radio" name="subscription" id="5yf" class="member__radio">
+										</div>
 									</div>
 								</div>
 							</div>
@@ -148,40 +164,60 @@
 									<!-- annual cleanup -->
 									<div class="member__subscription">
 										<!-- Label for the radio button -->
-										<label for="annual-clean-up-day" class="member__label--subscription">Annual clean-up day</label>
+										<div class="member__field--label">
+											<label for="annual-clean-up-day" class="member__label--subscription">Annual clean-up day</label>
+										</div>
 										<!-- the radio select button -->
-										<input type="checkbox" name="annual-clean-up-day" id="acd" class="member__checkbox"> 
+										<div class="member__field">
+											<input type="checkbox" name="annual-clean-up-day" id="acd" class="member__checkbox"> 
+										</div>
 									</div>
 									<!-- Three-yearly cockle survey -->
 									<div class="member__subscription">
 										<!-- Label for the radio button -->
-										<label for="three-yearly-cockle-survey" class="member__label--subscription">Three-yearly cockle survey</label>
+										<div class="member__field--label">
+											<label for="three-yearly-cockle-survey" class="member__label--subscription">Three-yearly cockle survey</label>
+										</div>
 										<!-- the radio select button -->
-										<input type="checkbox" name="three-yearly-cockle-survey" id="tcs" class="member__checkbox">
+										<div class="member__field">
+											<input type="checkbox" name="three-yearly-cockle-survey" id="tcs" class="member__checkbox">
+										</div>
 									</div>
 
 									<!-- Website and making video clips -->
 									<div class="member__subscription">
 										<!-- Label for the radio button -->
-										<label for="website-and-making-video-clips" class="member__label--subscription">Website and making video clips</label>
+										<div class="member__field--label">
+											<label for="website-and-making-video-clips" class="member__label--subscription">Website and making video clips</label>
+										</div>
 										<!-- the radio select button -->
-										<input type="checkbox" name="website-and-making-video-clips" id="wamvc" class="member__checkbox">
+										<div class="member__field">
+											<input type="checkbox" name="website-and-making-video-clips" id="wamvc" class="member__checkbox">
+										</div>
 									</div>
 
 									<!-- Submissions to local bodies -->
 									<div class="member__subscription">
 										<!-- label for the radio button-->
-										<label for="submissions-to-local-bodies" class="member__label--subscription">Submissions to local bodies</label>
+										<div class="member__field--label">
+											<label for="submissions-to-local-bodies" class="member__label--subscription">Submissions to local bodies</label>
+										</div>
 										<!-- The radio select button -->
-										<input type="checkbox" name="submissions-to-local-bodies" id="stlb" class="member__checkbox">
+										<div class="member__field">
+											<input type="checkbox" name="submissions-to-local-bodies" id="stlb" class="member__checkbox">
+										</div>
 									</div>
 
 									<!-- Eductional programmes for schools -->
 									<div class="member__subscription">
 										<!-- Label for the radio button -->
-										<label for="educational-programmes-for-schools" class="member__label--subscription">Educational programmes for schools</label>
+										<div class="member__field--label">
+											<label for="educational-programmes-for-schools" class="member__label--subscription">Educational programmes for schools</label>
+										</div>
+										<div class="member__field">
 										<!-- The radio select button -->
-										<input type="checkbox" name="educational-programmes-for-schools" id="epfs" class="member__checkbox">
+											<input type="checkbox" name="educational-programmes-for-schools" id="epfs" class="member__checkbox">
+										</div>
 									</div>
 
 								</div>
