--- a/index.html
+++ b/index.html
@@ -74,8 +74,6 @@
 
 							<p>P&amacr;uatahanui Inlet is the only large estuarine wetland left in the lower half of New Zealand's North Island. It is at risk, mainly from human activities in both the Inlet and its catchment. We call ourselves the 'Guardians of Pāuatahanui Inlet' because we work to promote recognition of the ecological, recreational and cultural values of the Inlet.</p>
 
-							<p>On this website you can read about how we care for the Inlet and promote its wellbeing with central and local government. You can learn about our <b>activities</b> and <b>policies, and read our newsletters</b> and <b>annual reports</b>. You will find <b>scientific information</b> about the Inlet and its catchment and links to relevant <b>research</b>. The section 'The Inlet' contains information about the <b>natural</b> and <b>human history</b> and current concerns about threats to Inlet ecology. Teachers can download our <b>educational</b> resources.</p>
-
 						</div>
 
 					</div>
@@ -85,6 +83,12 @@
 						<div class="section__carousel">
 							<div class="test"></div>
 						</div>
+					</div>
+
+					<div class="section__article--text">					
+
+						<p>On this website you can read about how we carefor the Inlet and promote its wellbeing withcentral and local government. You can learn aboutour <b>activities</b> and <b>policies, and readour newsletters</b> and <b>annual reports</b>.You will find <b>scientific information</b> aboutthe Inlet and its catchment and links to relevant<b>research</b>. The section 'The Inlet' containsinformation about the <b>natural</b> and <b>humanhistory</b> and current concerns about threats toInlet ecology. Teachers can download our <beducational</b> resources.</p>
+
 					</div>
 
 					<!-- Button positioned after the article -->
